# dotfiles

./: .gitignore  .gitmodules  .sops.yaml  CHEATSHEET.md  README.md  flake.nix  options.nix  secrets.yaml  us  vimium-options.json
.config/: mimeapps.list
.config/alacritty/: alacritty.yml
.config/bspwm/: bspwmrc  noswallow
.config/coc/: list-commands-history.json  list-extensions-history.json  list-outline-history.json  memos.json
.config/configstore/: update-notifier-npm.json
.config/gtk-3.0/: settings.ini
.config/kitty/: kitty.conf
.config/nvim/: .netrwhist  coc-settings.json  init.vim
.config/picom/: picom.conf
.config/polybar/: config  launch.sh
.config/pulse/: 97266471600e1507478eb4976056588c-device-volumes.tdb  97266471600e1507478eb4976056588c-stream-volumes.tdb  cookie
.config/rofi/: nord.rasi
.config/sxhkd/: sxhkdrc
.doom.d/: config.el  init.el  packages.el
.local/scripts/: move-memes.sh  nbfc-start.sh  update-dotfiles.sh
home-modules/browsers/: chromium.nix  default.nix
home-modules/cli/: default.nix  fzf.nix  ssh.nix  tmux.nix
home-modules/desktop/: default.nix
home-modules/gui/: default.nix  easyeffects.nix
home-modules/other/: androidcam.nix  (+5 more)
hosts/: metadata.nix
lib/: mkSystem.nix
modules/: default.nix
nixos-modules/selfhost/matrix/: bot.py  matrix.nix  ntfy-bot.nix  pyproject.toml  test_bot.py
scripts/: change-polybar-theme.sh  launch-polybar.sh
services/: arr-stack.nix  ddns.nix  default.nix  minecraft.nix  pihole-unbound.nix  pihole_unbound.nix  postgres.nix  traccar.nix  traefik.nix  transmission.nix
(+784 files in other folders)
