[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-ntfy-bot"
version = "0.1.0"
description = "Matrix room reminder bot via ntfy"
requires-python = ">=3.11"

[project.scripts]
matrix-ntfy-bot = "bot:main"

[tool.setuptools]
py-modules = ["bot"]
